@@ -14,7 +14,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CategoryService {
@@ -34,7 +33,7 @@ public class CategoryService {
         return categoryRepository.findAllByUsername(username)
                 .stream()
                 .map(CategoryJson::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
